name:                bower-json
version:             0.1.0.0
synopsis:            Parse, query, and modify bower.json package description files.
homepage:            https://github.com/hdgarrood/bower-json
license:             MIT
license-file:        LICENSE
author:              Harry Garrood
maintainer:          harry@garrood.me
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Web.BowerJson
  other-modules:     Web.BowerJson.Utils
  build-depends:     base >=4.7 && <4.9
                   , aeson >= 0.8 && <0.9
                   , filepath
                   , containers
                   , text
                   , bytestring

  hs-source-dirs:    src
  default-language:  Haskell2010
