name:                bower-json
version:             0.1.0.0
synopsis:            Parse, query, and modify bower.json package description files.
homepage:            https://github.com/hdgarrood/bower-json
license:             MIT
license-file:        LICENSE
author:              Harry Garrood
maintainer:          harry@garrood.me
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Web.BowerJson
  other-modules:     Web.BowerJson.Utils
  build-depends:     base >=4 && <5
                   , aeson >=0.6
                   , filepath
                   , containers
                   , unordered-containers
                   , text
                   , bytestring

  ghc-options:       -Wall
  hs-source-dirs:    src
  default-language:  Haskell2010

test-suite tests
    type:            exitcode-stdio-1.0
    main-is:         Main.hs
    hs-source-dirs:  test
    build-depends:   base >=4 && <5
                   , bower-json -any
                   , aeson -any
                   , bytestring -any
                   , containers -any
                   , tasty -any
                   , tasty-hunit -any
  ghc-options:       -Wall
  default-language:  Haskell2010
